[tool.poetry]
name = "fastllm"
version = "0.1.0"
description = "Fast and easy wrapper around LLMs."
authors = ["Clemens Kriechbaumer <clemens.kriechbaumer@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/clemens33/fastllm"
packages = [{ include = "fastllm" }]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
jinja2 = "^3.1.2"
backoff = "^2.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.278"
black = "^23.7.0"
pyright = "^1.1.317"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["D", "F"]
ignore = ["D202"]
target-version = "py311"

[tool.ruff.pydocstyle]
convention = "google"
ignore-decorators = ["D202"]

[tool.black]
line-length = 88

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
markers = [    
    "openai: mark tests requiring openai api key",
]